--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,13 @@
     <!-- headerの内容がこの1行で収まる -->
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, msg| %>
+        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+      <% end %>
       <%= yield %>
+      <!--Rails.env.development?　⇨　真（true）であればdebug(params)が表示される仕組み-->
+      <!--開発環境のみ表示される様に設定-->
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
