--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,30 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Top", root_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <!--ログインするとロゴなどがあるヘッダー部分の文字が、下記の様に変化（ドロップダウン）-->
+        <% if logged_in? %> <!--helpers/sessionshelperファイルに定義している-->
+          <li><%= link_to "Users", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <!--current_user　⇨　helpers/sessionshelperファイルに定義している-->
+              <li><%= link_to "Show", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
 </header>
+
+<!--上記のドロップダウン機能を有効化するため、Railsのapplication.jsファイルを修正して
+Bootstrapに同梱されているJavaScriptライブラリとjQueryを読み込むようアセットパイプラインに指示-->
