--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <li><%= link_to "Top", root_path %></li>
         <!--ログインするとロゴなどがあるヘッダー部分の文字が、下記の様に変化（ドロップダウン）-->
         <% if logged_in? %> <!--helpers/sessionshelperファイルに定義している-->
-          <li><%= link_to "Users", '#' %></li>
+          <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
@@ -14,7 +14,8 @@
             <ul class="dropdown-menu">
               <!--current_user　⇨　helpers/sessionshelperファイルに定義している-->
               <li><%= link_to "Show", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <!--(current_user)　⇨　現在ログイン中のユーザーIDをリソースに当てはめて判断する。-->
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: :delete %>
