--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,12 @@
 <% provide(:title, 'Sign up') %>
+<% provide(:class_text, 'signup') %>
+<% provide(:button_text, '新規作成') %>
 <h1>アカウント情報の作成</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
-      <%= render 'shared/error_messages' %> <!--app/views/shared/_error_messages.html.erbをrenderする-->
-      
-      <%= f.label :name, class: "label-signup"%> <!--名前-->
-      <%= f.text_field :name, class: "form-control"  %>
-
-      <%= f.label :email, class: "label-signup"  %> <!--メールアドレス-->
-      <%= f.email_field :email, class: "form-control" %>
-      
-      <%= f.label :affiliation, class: "label-signup" %> <!--所属-->
-      <%= f.text_field :affiliation, class: "form-control" %>
-
-      <%= f.label :password, class: "label-signup" %> <!--パスワード-->
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label :password_confirmation, "Confirmation", class: "label-signup" %> <!--パスワード確認-->
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit :login, class: "btn btn-primary btn-block btn-signup" %>
-    <% end %>
+    <div class="col-md-6 col-md-offset-3">
+      <%= render 'form' %>
+    </div>
   </div>
 </div>
