Finish japanization-and-time-format

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -3,7 +3,7 @@
     <div class="alert alert-danger">
       <!--例/エラーが2件発生していた場合、pluralize(2, "error")に置き換わる。-->
       <!--"1 error" "2 errors"のようにエラーの件数に応じて適切な英文を返す。-->
-      The form contains <%= pluralize(@user.errors.count, "error") %>.
+      入力エラーが<%= @user.errors.count %>件ありました。
     </div>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
