--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,9 @@
         <li><%= link_to "トップへ", root_path %></li>
         <!--ログインするとロゴなどがあるヘッダー部分の文字が、下記の様に変化（ドロップダウン）-->
         <% if logged_in? %> <!--helpers/sessionshelperファイルに定義している-->
+          <% if current_user.admin? %>
           <li><%= link_to "ユーザー一覧", users_path %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               アカウント<b class="caret"></b>
