--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,6 +5,21 @@
   text-align: center;
 }
 
+
+/* ユーザー勤怠情報テーブル */
+
+#table-attendances {
+  th {
+    vertical-align: middle;
+    text-align: center;
+  }
+  td {
+    vertical-align: middle;
+    text-align: center;
+  }
+}
+
+
 /* 入力フォーム */
 
 .label-signup {
@@ -21,6 +36,14 @@
 
 .btn-user--edit {
   margin-top: 10px;
+}
+
+/* ユーザー一覧ページ */
+
+#table-users {
+  td {
+    vertical-align: middle;
+  }  
 }
 
 /* ユーザー一覧ページ */
