--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,19 +2,57 @@
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
-      <td>時間管理表</td>
+      <td><%= link_to "⇦", user_path(date: @first_day.prev_month) %>【<%= l(@first_day, format: :middle) %>】時間管理表 <%= link_to " ⇨", user_path(date: @first_day.next_month) , class: "btn" %> </td>
       <!--app/helpers/users_helper.rbに定義済み-->
-      <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
+      <td>指定勤務時間 : <%= format_basic_info(@user.work_time) %></td>
       <!--app/helpers/users_helper.rbに定義済み-->
-      <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
+      <td>基本時間 : <%= format_basic_info(@user.basic_time) %></td>
       <td>初日</td>
     </tr>
 
     <tr>
-      <td>所属:<%= @user.affiliation.present? ? @user.affiliation : "未所属" %></td>
-      <td>名前：<%= @user.name %></td>
-      <td>コード出勤日数</td>
-      <td>絞め</td>
+      <td>所属 : <%= @user.affiliation.present? ? @user.affiliation : "未所属" %></td>
+      <td>氏名 : <%= @user.name %></td>
+      <td>出勤日数</td>
+      <td>絞め : <%= l(@last_day, format: :short) %></td> <!--config/locales/ja.ymlの40行目あたり-->
     </tr>
+  </table>
+</div>
+
+<div>
+  <table class="table table-striped table-bordered table-hover" id="table-attendances">
+    <thead>
+      <tr>
+        <th rowspan = "2">日付</th>
+        <th rowspan = "2">曜日</th>
+        <th rowspan = "2">勤怠登録</th>
+        <th colspan = "2">出社</th>
+        <th colspan = "2">退社</th>
+        <th rowspan = "3">在社時間</th>
+        <th rowspan = "3">備考</th>
+      </tr>
+      <tr>
+        <th>時</th>
+        <th>分</th>
+        <th>時</th>
+        <th>分</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <!--(@first_day..@last_day) ⇨ 範囲オブジェクトとして扱う-->
+      <!--(@first_day..@last_day) ⇨ 配列として扱う-->
+      <% (@first_day..@last_day).each do |day| %>
+        <tr>
+          <td><%= l(day, format: :short) %></td>
+          <td><%= $days_of_the_week[day.wday] %></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
 </div>
