--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,18 +6,25 @@
       <!--app/helpers/users_helper.rbに定義済み-->
       <td>指定勤務時間 : <%= format_basic_info(@user.work_time) %></td>
       <!--app/helpers/users_helper.rbに定義済み-->
-      <td>基本時間 : <%= format_basic_info(@user.basic_time) %></td>
+      <td colspan = "3">基本時間 : <%= format_basic_info(@user.basic_time) %></td>
       <!--app/helpers/attendances_helper.rbに定義済み-->
-      <td>初日<%= l(@first_day, format: :short) %></td>
+      <td colspan = "1">初日<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
       <td>所属 : <%= @user.affiliation.present? ? @user.affiliation : "未所属" %></td>
       <td>氏名 : <%= @user.name %></td>
+      <td>コード</td>
+      <td></td>
       <td>出勤日数 : <%= @worked_sum %>日</td>
       <td>絞め : <%= l(@last_day, format: :short) %></td> <!--config/locales/ja.ymlの40行目あたり-->
     </tr>
   </table>
+</div>
+<!--勤怠編集ページに移動-->
+<div class="btn-users-show">
+  <!--今回はparamsハッシュにdateキーとして、@first_dayを指定。これで受け取ったparams[:date]をもとに、どの月の情報を表示するか判断できる-->
+  <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-default" %>
 </div>
 
 <div>
@@ -26,17 +33,19 @@
       <tr>
         <th rowspan = "2">日付</th>
         <th rowspan = "2">曜日</th>
-        <th colspan = "3">出社</th>
+        <th colspan = "4">出社</th>
         <th colspan = "3">退社</th>
-        <th rowspan = "2">在社時間</th>
-        <th rowspan = "2">備考</th>
+        <th rowspan = "1">在社時間</th>
+        <th rowspan = "1">備考</th>
       </tr>
       <tr>
+        <th colspan = "1">時</th>
+        <th colspan = "1">分</th>
+        <th colspan = "2"></th>
         <th>時</th>
         <th>分</th>
         <th></th>
-        <th>時</th>
-        <th>分</th>
+        <th></th>
         <th></th>
       </tr>
     </thead>
@@ -45,37 +54,49 @@
       <!--(@first_day..@last_day) ⇨ 範囲オブジェクトとして扱う-->
       <!--(@first_day..@last_day) ⇨ 配列として扱う-->
       <% @attendances.each do |day| %>
+        <!--土日のみ色変え-->
+        <% 
+          css_class = 
+          case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+          when '土'
+            'text-primary'
+          when '日'
+            'text-danger'
+          end
+        %>
         <tr>
-          <td><%= l(day.worked_on, format: :short) %></td>
-          <td><%= $days_of_the_week[day.worked_on.wday] %></td>
-          <!--attendances.helperで変換-->
+          <td><%= l(day.worked_on, format: :short) %></td> <!--日付-->
+          <!--上記の土日色変えをここに反映させる。-->
+          <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td> <!--曜日-->
+          <!--もし、終業時間がある時、終業時間を表示。attendannce_helperファイルに定義。-->
           <td><%= format_hour(day.started_at) if day.started_at.present? %></td>
-          <td><%= format_min(day.started_at) if day.started_at.present? %></td>
-          <td>
+          <!--もし、終業時間が、ある時、分単位を表示。attendannce_helperファイルに定義。-->
+          <td><%= format_min(day.started_at) if day.started_at.present? %></td> <!---->
+          <td colspan = "2">
             <!--現在の日 == 日付 && 出社時間が空なら”出勤ボタン”を出す。-->
-            <% if (Date.current == day.worked_on) && day.started_at.nil? %>
+            <% if btn_text = attendance_state(day) %>
               <%= link_to "出勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
-          <!--もし、就業時間がある時、就業時間の時間を表示。attendannce_helperファイルに定義。-->
+          <!--もし、終業時間がある時、終業時間を表示。attendannce_helperファイルに定義。-->
           <td><%= format_hour(day.finished_at) if day.finished_at.present? %></td>
-          <!--もし、就業時間が、ある時、分単位を表示。attendannce_helperファイルに定義。-->
+          <!--もし、終業時間が、ある時、分単位を表示。attendannce_helperファイルに定義。-->
           <td><%= format_min(day.finished_at) if day.finished_at.present? %></td> <!---->
           <td>
-            <!--現在の日 == 日付 && 出社時間が空なら”出勤ボタン”を出す。-->
+            <!--現在の日 == 日付 && 出社時間が空なら”退勤登録ボタン”を出す。-->
             <% if (Date.current == day.worked_on) && day.finished_at.nil? %>
               <%= link_to "退勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
           <td>
-            <!--もし、出勤時間があり、且つ、就業時間がある時-->
+            <!--もし、始業時間があり、且つ、終業時間がある時-->
             <% if day.started_at.present? && day.finished_at.present? %>
-              <!--勤務時間（出勤時間、就業時間）-->
+              <!--勤務時間（始業時間、終業時間）-->
               <%= str_times = working_times(day.started_at, day.finished_at) %>
               <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
             <% end %>
           </td>
-          <td></td>
+          <td><%= day.note %></td>
         </tr>
       <% end %>
     </tbody>
@@ -86,17 +107,18 @@
         <td rowspan="2"></td>
         <td rowspan="2"></td>
         <td rowspan="2"></td>
-        <td colspan="2">累計日数</td>
+        <td rowspan="3"></td>
+        <td colspan="3">累計日数</td>
         <td colspan="2">総合勤務時間</td>
         <td colspan="2">累計在社時間</td>
       </tr>
       <tr>
         <!--累計日数-->
-        <td colspan="2"><%= @attendances.count %></td>
+        <td colspan="3"><%= @attendances.count %></td>
         <!--総合勤務時間-->
         <td colspan="2"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
         <!--累計在社時間-->
-        <td colspan="2"><%= format("%.2f", @total_working_times.to_f) %></td>
+        <td><%= format("%.2f", @total_working_times.to_f) %></td>
       </tr>
     </tfoot>
   </table>
