--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,8 @@
         <!--ログインするとロゴなどがあるヘッダー部分の文字が、下記の様に変化（ドロップダウン）-->
         <% if logged_in? %> <!--helpers/sessionshelperファイルに定義している-->
           <% if current_user.admin? %>
-          <li><%= link_to "ユーザー一覧", users_path %></li>
+            <li><%= link_to "ユーザー一覧", users_path %></li>
+            <li><%= link_to '基本情報の修正', edit_basic_info_user_path(current_user) %></li>
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
