各種追加機能及び細部の修正　２回目

--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -16,11 +16,21 @@
       </thead>
       <tbody>
         <% @attendances.each do |day| %>
+        
+          <% 
+            css_class = 
+            case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+            when '土'
+              'text-primary'
+            when '日'
+              'text-danger'
+            end
+          %>
           <!--各フォームのinputタグのname属性にattendances[id][カラム名]という形式で展開されるようになる。-->
           <%= f.fields_for "attendances[]", day do |attendance| %>
             <tr>
               <td><%= l(day.worked_on, format: :short) %></td>
-              <td><%= $days_of_the_week[day.worked_on.wday] %></td>
+              <td class="<%= css_class %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
               <!--もし、現在のユーザーが管理権限者では無く、且つ、現在の勤怠の日より日付が大きい時は-->
               <% if !current_user.admin? && (Date.current < day.worked_on) %>
               <!--出勤時間と退社時間を操作出来ないようにする。-->
