--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <!--app/helpers/users_helper.rbに定義済み-->
       <td colspan = "3">基本時間 : <%= format_basic_info(@user.basic_time) %></td>
       <!--app/helpers/attendances_helper.rbに定義済み-->
-      <td colspan = "1">初日<%= l(@first_day, format: :short) %></td>
+      <td colspan = "1">初日 : <%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
