--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -84,7 +84,7 @@
           <td><%= format_min(day.finished_at) if day.finished_at.present? %></td> <!---->
           <td>
             <!--現在の日 == 日付 && 出社時間が空なら”退勤登録ボタン”を出す。-->
-            <% if (Date.current == day.worked_on) && day.finished_at.nil? %>
+            <% if (Date.current == day.worked_on) && day.started_at.present? && day.finished_at.blank? %>
               <%= link_to "退勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
